--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,7 +27,9 @@
         </Image>
         <Button Content="添加生物" HorizontalAlignment="Left" Margin="337,0,0,0" VerticalAlignment="Top" Width="110"
                 Height="30" Click="Button_Click" Style="{StaticResource Button}"/>
-        <Label Content="Color_yr" HorizontalAlignment="Left" Margin="333,293,0,0" VerticalAlignment="Top" FontSize="26"/>
+        <Label Content="Color_yr" HorizontalAlignment="Left" Margin="337,294,0,0" VerticalAlignment="Top" FontSize="26"/>
+        <CheckBox Content="高斯模糊" HorizontalAlignment="Left" Margin="342,283,0,0" VerticalAlignment="Top"
+                  Style="{StaticResource Check}" Name="gs"/>
 
 
     </Grid>
