--- a/WPF/Mob/ARMOR_STAND.xaml
+++ b/WPF/Mob/ARMOR_STAND.xaml
@@ -4,55 +4,55 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
-             mc:Ignorable="d" Height="290" Width="290">
+             mc:Ignorable="d" Height="290" Width="319">
     <Grid>
-        <Label Content="盔甲架设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="戴在身体的物品" HorizontalAlignment="Left" Height="25" Margin="5,40,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="戴在脚部的物品" HorizontalAlignment="Left" Height="25" Margin="5,65,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="戴在手上的物品" HorizontalAlignment="Left" Height="25" Margin="5,90,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="戴在头部的物品" HorizontalAlignment="Left" Height="25" Margin="5,115,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="戴在腿部的物品" HorizontalAlignment="Left" Height="25" Margin="5,140,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="盔甲架动作，依次为X,Y,Z" HorizontalAlignment="Left" Height="25" Margin="5,185,0,0" VerticalAlignment="Top" Style="{StaticResource Label}" RenderTransformOrigin="0.445,0"/>
-        <Label Content="头" HorizontalAlignment="Left" Height="25" Margin="5,210,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-        <Label Content="左手" HorizontalAlignment="Left" Height="25" Margin="5,235,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-        <Label Content="左脚" HorizontalAlignment="Left" Height="25" Margin="5,260,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-        <Label Content="身体" HorizontalAlignment="Left" Height="25" Margin="125,210,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-        <Label Content="右手" HorizontalAlignment="Left" Height="25" Margin="125,235,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-        <Label Content="右脚" HorizontalAlignment="Left" Height="25" Margin="125,260,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+        <Label Content="盔甲架设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}" Margin="5,0,0,0"/>
+        <Label Content="戴在身体的物品" HorizontalAlignment="Left" Height="25" Margin="10,40,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="戴在脚部的物品" HorizontalAlignment="Left" Height="25" Margin="10,65,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="戴在手上的物品" HorizontalAlignment="Left" Height="25" Margin="10,90,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="戴在头部的物品" HorizontalAlignment="Left" Height="25" Margin="10,115,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="戴在腿部的物品" HorizontalAlignment="Left" Height="25" Margin="10,140,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="盔甲架动作，依次为X,Y,Z" HorizontalAlignment="Left" Height="25" Margin="10,185,0,0" VerticalAlignment="Top" Style="{StaticResource Label}" RenderTransformOrigin="0.445,0"/>
+        <Label Content="头" HorizontalAlignment="Left" Height="25" Margin="17,210,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+        <Label Content="左手" HorizontalAlignment="Left" Height="25" Margin="10,235,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+        <Label Content="左脚" HorizontalAlignment="Left" Height="25" Margin="10,260,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+        <Label Content="身体" HorizontalAlignment="Left" Height="25" Margin="184,210,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+        <Label Content="右手" HorizontalAlignment="Left" Height="25" Margin="184,235,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+        <Label Content="右脚" HorizontalAlignment="Left" Height="25" Margin="184,260,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
 
-        <CheckBox Content="是否有手臂" HorizontalAlignment="Left" Height="15" Margin="5,25,0,0" VerticalAlignment="Top"
+        <CheckBox Content="是否有手臂" HorizontalAlignment="Left" Height="15" Margin="10,25,0,0" VerticalAlignment="Top"
                   IsChecked="{Binding obj.HasArms}" Name="HasArms" Style="{StaticResource Check}"/>
-        <CheckBox Content="重力影响" HorizontalAlignment="Left" Height="15" Margin="100,25,0,0" VerticalAlignment="Top"
+        <CheckBox Content="重力影响" HorizontalAlignment="Left" Height="15" Margin="110,25,0,0" VerticalAlignment="Top"
             IsChecked="{Binding obj.HasGravity}" Name="HasGravity" Style="{StaticResource Check}"/>
-        <CheckBox Content="是否隐形" HorizontalAlignment="Left" Height="15" Margin="185,25,0,0" VerticalAlignment="Top"
+        <CheckBox Content="是否隐形" HorizontalAlignment="Left" Height="15" Margin="198,25,0,0" VerticalAlignment="Top"
             IsChecked="{Binding obj.Invisible}" x:Name="Invisible" Style="{StaticResource Check}"/>
-        <CheckBox Content="盔甲架是否为标记" HorizontalAlignment="Left" Height="15" Margin="5,170,0,0" VerticalAlignment="Top"
+        <CheckBox Content="盔甲架是否为标记" HorizontalAlignment="Left" Height="15" Margin="10,168,0,0" VerticalAlignment="Top"
             IsChecked="{Binding obj.Marker}" x:Name="Marker" RenderTransformOrigin="0.368,0.667" Style="{StaticResource Check}"/>
-        <CheckBox Content="是否是小盔甲架" HorizontalAlignment="Left" Height="15" Margin="130,170,0,0" VerticalAlignment="Top"
+        <CheckBox Content="是否是小盔甲架" HorizontalAlignment="Left" Height="15" Margin="176,168,0,0" VerticalAlignment="Top"
             IsChecked="{Binding obj.Small}" x:Name="Small" RenderTransformOrigin="0.368,0.667" Style="{StaticResource Check}"/>
 
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="100,45,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.ItemBody}" VerticalAlignment="Top" Width="180" Name="ItemBody"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="100,70,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.ItemFeet}" VerticalAlignment="Top" Width="180" x:Name="ItemFeet"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="100,95,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.ItemHand}" VerticalAlignment="Top" Width="180" x:Name="ItemHand"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="100,120,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.ItemHead}" VerticalAlignment="Top" Width="180" x:Name="ItemHead"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="100,145,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.ItemLegs}" VerticalAlignment="Top" Width="180" x:Name="ItemLegs"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="40,215,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.Pose.Head}" VerticalAlignment="Top" Width="85"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="40,240,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.Pose.LeftArm}" VerticalAlignment="Top" Width="85"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="40,265,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.Pose.LeftLeg}" VerticalAlignment="Top" Width="85"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="160,215,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.Pose.Body}" VerticalAlignment="Top" Width="85"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="160,240,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.Pose.RightArm}" VerticalAlignment="Top" Width="85"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="160,265,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
-                 Text="{Binding obj.Pose.RightLeg}" VerticalAlignment="Top" Width="85"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,43,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.ItemBody}" VerticalAlignment="Top" Width="200" Name="ItemBody"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,68,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.ItemFeet}" VerticalAlignment="Top" Width="200" x:Name="ItemFeet"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,93,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.ItemHand}" VerticalAlignment="Top" Width="200" x:Name="ItemHand"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,118,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.ItemHead}" VerticalAlignment="Top" Width="200" x:Name="ItemHead"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,143,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.ItemLegs}" VerticalAlignment="Top" Width="200" x:Name="ItemLegs"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,213,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.Pose.Head}" VerticalAlignment="Top" Width="86"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,238,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.Pose.LeftArm}" VerticalAlignment="Top" Width="86"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,263,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.Pose.LeftLeg}" VerticalAlignment="Top" Width="86"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,213,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.Pose.Body}" VerticalAlignment="Top" Width="86"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,238,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.Pose.RightArm}" VerticalAlignment="Top" Width="86"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,263,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+                 Text="{Binding obj.Pose.RightLeg}" VerticalAlignment="Top" Width="86"/>
 
     </Grid>
 </UserControl>
