--- a/WPF/Mob/PIG_ZOMBIE_VILLAGER.xaml
+++ b/WPF/Mob/PIG_ZOMBIE_VILLAGER.xaml
@@ -4,23 +4,23 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
-             mc:Ignorable="d" Height="290" Width="290">
+             mc:Ignorable="d" Height="290" Width="319">
     <Grid>
-        <Label Content="僵尸猪人村民设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="加强伤害几率" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="村民职业" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="{Binding obj.ReinforcementsChance}" HorizontalAlignment="Left" Margin="255,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="僵尸猪人村民设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}" Margin="5,0,0,0"/>
+        <Label Content="加强伤害几率" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="村民职业" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="{Binding obj.ReinforcementsChance}" Height="25" Width="35" HorizontalAlignment="Left" Margin="274,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
 
-        <CheckBox Content="是否为愤怒状态" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top"
+        <CheckBox Content="是否为愤怒状态" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"
             IsChecked="{Binding obj.Angry}" Style="{StaticResource Check}"/>
 
-        <ComboBox HorizontalAlignment="Left" Height="20" Margin="70,78,0,0" VerticalAlignment="Top" Width="135"
+        <ComboBox HorizontalAlignment="Left" Height="20" Margin="73,83,0,0" VerticalAlignment="Top" Width="161"
             x:Name="Type" Text="{Binding obj.Profession}" Style="{StaticResource ComboBoxStyle}"/>
 
-        <Button Content="随机职业" HorizontalAlignment="Left" Height="20" Margin="210,78,0,0" VerticalAlignment="Top" Width="70" 
+        <Button Content="随机职业" HorizontalAlignment="Left" Height="20" Margin="239,83,0,0" VerticalAlignment="Top" Width="70" 
                 Click="Button_Click" Style="{StaticResource Button}"/>
 
-        <Slider HorizontalAlignment="Left" Margin="97,30,0,0" VerticalAlignment="Top" Width="153" Maximum="1" LargeChange="0.1" TickFrequency="0.1"
+        <Slider HorizontalAlignment="Left" Margin="97,32,0,0" VerticalAlignment="Top" Width="172" Maximum="1" LargeChange="0.1" TickFrequency="0.1"
             Value="{Binding obj.ReinforcementsChance}" Style="{StaticResource Slider}"/>
     </Grid>
 </UserControl>
