--- a/WPF/Mob/SNOWMAN.xaml
+++ b/WPF/Mob/SNOWMAN.xaml
@@ -4,11 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
-             mc:Ignorable="d" Height="300" Width="290">
+             mc:Ignorable="d" Height="300" Width="319">
     <Grid>
-        <Label Content="雪人设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        
-        <CheckBox Content="是否阻止在脚下造雪" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top"
+        <Label Content="雪人设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}" Margin="5,0,0,0"/>
+
+        <CheckBox Content="是否阻止在脚下造雪" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"
                   IsChecked="{Binding obj.PreventSnowFormation}" Style="{StaticResource Check}"/>
 
     </Grid>
