--- a/WPF/Other/DropsChange.xaml
+++ b/WPF/Other/DropsChange.xaml
@@ -5,21 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Other"
         mc:Ignorable="d"
-        Title="掉落物修改" Height="115" Width="224" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/icon.ico">
+        Title="掉落物修改" Height="126" Width="233" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/icon.ico">
     <Grid Background="Black" Margin="0,0,0,0">
 
         <Label Content="类型/名字" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="数量" HorizontalAlignment="Left" Margin="0,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="概率" HorizontalAlignment="Left" Margin="0,50,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="{Binding Drops.chance}" HorizontalAlignment="Left" Margin="175,50,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"
-               Width="34"/>
+        <Label Content="数量" HorizontalAlignment="Left" Margin="0,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="概率" HorizontalAlignment="Left" Margin="0,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="{Binding Drops.chance}" HorizontalAlignment="Left" Margin="175,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"
+               Height="26" Width="35"/>
 
-        <TextBox HorizontalAlignment="Left" Margin="34,30,0,0" TextWrapping="Wrap" Text="{Binding Drops.amount}" VerticalAlignment="Top"
-                 Style="{StaticResource TextBox}" Width="173" />
-        <TextBox HorizontalAlignment="Left" Margin="63,3,0,0" TextWrapping="Wrap" Text="{Binding Drops.Type}" VerticalAlignment="Top"
-                 Style="{StaticResource TextBox}" Width="144" />
+        <TextBox HorizontalAlignment="Left" Margin="39,35,0,0" Height="20" TextWrapping="Wrap" Text="{Binding Drops.amount}" VerticalAlignment="Top"
+                 Style="{StaticResource TextBox}" Width="171" />
+        <TextBox HorizontalAlignment="Left" Margin="68,5,0,0" TextWrapping="Wrap" Text="{Binding Drops.Type}" VerticalAlignment="Top"
+                 Style="{StaticResource TextBox}" Width="142" />
 
-        <Slider HorizontalAlignment="Left" Margin="34,52,0,0" VerticalAlignment="Top" Width="139" Style="{StaticResource Slider}" 
+        <Slider HorizontalAlignment="Left" Margin="39,62,0,0" VerticalAlignment="Top" Width="134" Style="{StaticResource Slider}" 
                 Maximum="1" TickFrequency="0.1" LargeChange="0.1" Value="{Binding Drops.chance}"/>
     </Grid>
 </Window>
