--- a/WPF/Other/DropsChange.xaml
+++ b/WPF/Other/DropsChange.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Other"
         mc:Ignorable="d"
-        Title="掉落物修改" Height="126" Width="233" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/icon.ico">
+        Title="掉落物修改" Height="150" Width="228" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/icon.ico" WindowStartupLocation="CenterScreen">
     <Grid Background="Black" Margin="0,0,0,0">
 
         <Label Content="类型/名字" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
@@ -15,11 +15,13 @@
                Height="26" Width="35"/>
 
         <TextBox HorizontalAlignment="Left" Margin="39,35,0,0" Height="20" TextWrapping="Wrap" Text="{Binding Drops.amount}" VerticalAlignment="Top"
-                 Style="{StaticResource TextBox}" Width="171" />
+                 Style="{StaticResource TextBox}" Width="171" PreviewTextInput="TextCompositionEventArgs"/>
         <TextBox HorizontalAlignment="Left" Margin="68,5,0,0" TextWrapping="Wrap" Text="{Binding Drops.Type}" VerticalAlignment="Top"
-                 Style="{StaticResource TextBox}" Width="142" />
+                 Style="{StaticResource TextBox}" Width="142"/>
 
         <Slider HorizontalAlignment="Left" Margin="39,62,0,0" VerticalAlignment="Top" Width="134" Style="{StaticResource Slider}" 
                 Maximum="1" TickFrequency="0.1" LargeChange="0.1" Value="{Binding Drops.chance}"/>
+
+        <Button Content="OK" HorizontalAlignment="Left" Margin="135,91,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource Button}" IsDefault="True" Click="Button_Click" />
     </Grid>
 </Window>
